# slackware64-current

./: .gitignore
a/bzip2/: bzip2.SlackBuild  bzip2.yypkg.script
a/dbus/: config-regular  config-yypkg  dbus.SlackBuild
a/file/: file.SlackBuild
a/gettext/: gettext-tools.SlackBuild  gettext.SlackBuild
a/xz/: config-regular  config-yypkg  xz-5.0.3.tar.bz2.sig  xz-5.0.4.tar.bz2.sig  xz.SlackBuild
ap/cdparanoia/: cdparanoia.SlackBuild
ap/flac/: flac.SlackBuild
ap/madplay/: madplay.SlackBuild
ap/sox/: sox.SlackBuild
ap/sqlite/: configure.ac  sqlite.SlackBuild
d/autoconf/: autoconf.SlackBuild
d/automake/: automake.SlackBuild
d/binutils/: binutils-2.22.52.0.1.tar.sign  binutils-2.23.51.0.6.tar.sign  binutils-2.24.51.0.3.tar.sign  binutils-fix-seg-fault-in-strings-on-corrupt-pe.patch  binutils.SlackBuild  binutils.yypkg.script  config  release.binutils-2.23.51.0.6
d/gcc/: config-core  config-full  gcc.SlackBuild  gcc.yypkg.script  slack-desc.gcc-gfortran
d/gdb/: gdb-7.8.2.tar.xz.sig  gdb-7.8.tar.xz.sig  gdb-7.9.tar.xz.sig  gdb.SlackBuild
d/gperf/: gperf.SlackBuild
d/libtool/: libtool-2.4.4.tar.xz.sig  libtool.SlackBuild
d/make/: make.SlackBuild
d/pkg-config/: config-bootstrap  config-regular  pkg-config.SlackBuild
l/atk/: atk.SlackBuild
l/boost/: boost.SlackBuild  boost.yypkg.script  user-config.jam.template
l/boost/fedora-patches/: boost-1.50.0-pool.patch  boost-1.54.0-date_time-unused_typedef.patch  boost-1.54.0-mpl-print.patch  boost-1.54.0-random-unused_typedef.patch  boost-1.54.0-tuple-unused_typedef.patch  boost-include-intrin-h-on-mingw-w64.patch  boost-mingw.patch
l/boost/patches/: 0001-bjam.patch  0002-python.patch
l/cairo/: cairo.SlackBuild
l/dbus-glib/: dbus-glib.SlackBuild
l/djvulibre/: djvulibre.SlackBuild
l/djvulibre/patches/: 0047-djvused-added-missing-command-remove-outline.patch  0053-portable-pthread_t-initialization.patch  0056-remove-extra-semi-in-test-for-std-c-includes.patch  0058-fixed-for-mingw.patch  0059-Attempt-to-work-around-typename-issues.patch  0060-more-mingw-fixes.patch  0061-removed-gstring-cruft.patch  0063-windows-recompile-reveals-issues.patch  0072-handle-period-in-crlf-files-as-well.patch  (+9 more)
l/expat/: expat.SlackBuild
l/freetype/: config-regular  config-yypkg  freetype.SlackBuild
l/fribidi/: 0001-benchmark-struct-tms-is-only-available-if-sys-times..patch  fribidi.SlackBuild
l/gdk-pixbuf2/: gdk-pixbuf2.SlackBuild  lib-Prefer-our-own-loaders-to-the-GDI+-one.patch
l/giflib/: giflib.SlackBuild
l/glib-networking/: glib-networking.SlackBuild
l/glib2/: glib2.SlackBuild
l/gmp/: gmp-5.0.4.tar.xz.sig  gmp-5.0.5.tar.xz.sig  gmp-5.1.1.tar.xz.sig  gmp-5.1.2.tar.xz.sig  gmp-5.1.3.tar.xz.sig  gmp.SlackBuild
l/gst-plugins-good/: gst-plugins-good.SlackBuild
l/gtk+2/: gtk+2.SlackBuild
l/harfbuzz/: 0001-configure.ac-remove-icu-glib-gobject-cairo-cairo-ft-.patch  config-regular  config-yypkg  harfbuzz.SlackBuild
l/icu4c/: icu4c.SlackBuild
l/lcms/: lcms.SlackBuild
l/lcms2/: lcms2.SlackBuild
l/libao/: libao.SlackBuild
l/libarchive/: 0001-windows-don-t-undef-stat-since-it-my-be-defined-to-s.patch  config-regular  config-yypkg  libarchive.SlackBuild  libarchive.yypkg.script  use-static-asserts-to-guarantee-abi-compatibility.patch
l/libcddb/: libcddb.SlackBuild
l/libcdio/: libcdio.SlackBuild
l/libcroco/: libcroco.SlackBuild
l/libdvdread/: libdvdread.SlackBuild
l/libffi/: libffi.SlackBuild
l/libid3tag/: libid3tag.SlackBuild
l/libidn/: libidn.SlackBuild
l/libjpeg/: config-yypkg  libjpeg.SlackBuild
l/libmad/: Makefile.am  configure.ac  libmad.SlackBuild  mad.pc.in
l/libmpc/: libmpc.SlackBuild
l/libogg/: libogg.SlackBuild
l/libpng/: libpng.SlackBuild
l/libsndfile/: libsndfile.SlackBuild
l/libsoup/: libsoup-2.42.3.1-fix-build-without-ntml.patch  libsoup.SlackBuild
l/libtasn1/: libtasn1.SlackBuild
l/libtheora/: libtheora.SlackBuild
l/libtiff/: libtiff.SlackBuild  libtiff.yypkg.script
l/libvorbis/: libvorbis.SlackBuild
l/libxml2/: libxml2.SlackBuild
l/libxslt/: libxslt.SlackBuild
l/mozilla-nss/: mozilla-nss.SlackBuild
l/mpfr/: mpfr-3.1.0.tar.xz.sig  mpfr-3.1.2.tar.xz.sig  mpfr.SlackBuild
l/pango/: pango.SlackBuild
l/pcre/: CVE-2014-8964-fix-zero-repeated-assertion-as-condition-bug.patch  pcre.SlackBuild
l/qt/: 0001-QCoreApplication-ibraryPaths-discovers-plugpath-rela.patch  0001-configure-use-pkg-config-for-libpng.patch  0001-windployqt-Fix-cross-compilation.patch  0002-Use-widl-instead-of-midl.-Also-set-QMAKE_DLLTOOL-to-.patch  0003-Tell-qmake-to-use-pkg-config.patch  config-native  config-regular  qt.SlackBuild  qt5-qmake-implib-dll-a.patch  qt5-use-system-zlib-in-host-libs.patch
l/readline/: readline.SlackBuild
l/sdl/: config-base  config-image  config-mixer  config-net  config-others  config-ttf  sdl.SlackBuild
l/taglib/: taglib.SlackBuild
l/zlib/: Makefile.yypkg  config-regular  config-yypkg  zlib.SlackBuild
n/ca-certificates/: ca-certificates.SlackBuild
n/curl/: cacert.pem.bz2  curl-7.29.0.tar.bz2.asc  curl-7.30.0.tar.bz2.asc  curl-7.31.0.tar.bz2.asc  curl-7.35.0.tar.bz2.asc  curl-7.36.0.tar.bz2.asc  curl.SlackBuild
n/gnutls/: gnutls-3.0.22.tar.xz.sig  gnutls-3.0.23.tar.xz.sig  gnutls-3.0.26.tar.xz.sig  gnutls-3.0.31.tar.xz.sig  gnutls-3.1.14.tar.xz.sig  gnutls-3.1.15.tar.xz.sig  gnutls-3.1.21.tar.xz.sig  gnutls-3.1.22.tar.xz.sig  gnutls-3.2.15.tar.xz.sig  gnutls.SlackBuild
n/lftp/: lftp-4.4.9.tar.xz.asc
n/libgcrypt/: libgcrypt-1.5.3.tar.bz2.sig  libgcrypt.SlackBuild
n/libgpg-error/: libgpg-error-1.11.tar.bz2.sig  libgpg-error.SlackBuild
n/nettle/: nettle.SlackBuild
n/openssl/: openssl-1.0.1d.tar.gz.asc  openssl.SlackBuild  slack-desc
n/wget/: config-full  config-yypkg  wget-1.14.tar.xz.sig  wget-1.16.2.tar.xz.sig  wget-1.16.tar.xz.sig  wget.SlackBuild
x/dejavu-fonts-ttf/: dejavu-fonts-ttf.SlackBuild
x/fontconfig/: config-regular  config-yypkg  fontconfig.SlackBuild
x/glew/: glew.SlackBuild  glew.url
x/mesa/: mesa.SlackBuild
xap/geeqie/: geeqie.SlackBuild
xap/gucharmap/: gucharmap.SlackBuild
(+8 files in other folders)
